--- a/style.css
+++ b/style.css
@@ -179,6 +179,45 @@ a{
   color: var(--white-color);
 }
 
+/* =========== cat btn=========== */
+
+/* CSS */
+.cat-btn {
+  --b: 2px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: var(--acent-color);
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.cat-btn:hover,
+.cat-btn:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+.cat-btn:active {
+  background: var(--color);
+  color: #fff;
+}
+/* ========== cat btn css============ */
+
 .container{
   --max-width:1200px;
   --padding: 1rem;
@@ -259,7 +298,7 @@ a{
     display: none;
   }
   .button{
-    font-size: var(--fs-400);
+    font-size: var(--fs-300);
   }
 }
 
@@ -275,6 +314,18 @@ a{
   background: var(--white-color);
   border-left: 5px solid var(--acent-color);
   padding: 1.5em;
+}
+.hero .content .top-text{
+  position: relative;
+}
+.hero .content .top-text::after{
+  content: "";
+  position: absolute;
+  right: -4em;
+  bottom: 5px;
+  height: 3px;
+  width: 60px;
+  background: var(--acent-color);
 }
 .hero .content .cta{
   display: flex;
@@ -373,4 +424,54 @@ a{
   .about-us{
     margin-top: 3em;
   }
+  .hero .content .cta span{
+    height: 1.5em;
+    width: 1.5em;
+    border-radius: 50%;
+    font-size: 1.2em;
+  }
+  .hero .content .cta{
+    gap: 2em;
+  }
+}
+
+
+/* =========== Course css =========== */
+.course{
+  background: #f5f4f4c5;
+  margin: 4em 0;
+  padding: 2em 0;
+}
+.course h2{
+  margin-bottom: 1em;
+}
+.course .catagory-btn .button-container .cat-btn{
+  margin-right: 1em;
+}
+.course .course-sub{
+  margin-top: 2em;
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+.course .course-sub .sub-box{
+  background: var(--white-color);
+  padding: 1em;
+}
+.course .course-sub .sub-box .thumb{
+  position: relative;
+  margin-bottom: 1em;
+}
+.course .course-sub .sub-box .trainer img{
+  width: 50px;
+  border-radius: 5px;
+}
+.course .course-sub .sub-box .thumb .sell-count{
+  position: absolute;
+  left: .5em;
+  bottom: .5em;
+  z-index: 111;
+  background: var(--acent-color);
+  padding: .2em .4em;
+  color: var(--white-color);
 }
