--- a/style.css
+++ b/style.css
@@ -135,6 +135,9 @@ ul{
 a{
   text-decoration: none;
 }
+span{
+  display: inline-block;
+}
 
 
 
@@ -157,6 +160,10 @@ a{
 .fs-subh{ font-size: var(--fs-subh);}
 .fs-body{ font-size: var(--fs-body);}
 
+.center{ text-align: center;}
+.mt{ margin-top: 1em;}
+.mtb{ margin: 1em 0;}
+
 .button{
   padding: .75rem 1.5rem;
   background: transparent;
@@ -171,6 +178,7 @@ a{
   display: flex;
   align-items: center;
   gap: .3rem;
+  display: inline-block;
 }
 .button:hover{
   background-color: var(--acent-color);
@@ -178,6 +186,13 @@ a{
   padding: .75rem 1.5rem;
   color: var(--white-color);
 }
+
+.box-even{
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
 
 /* =========== cat btn=========== */
 
@@ -448,6 +463,12 @@ a{
 .course .catagory-btn .button-container .cat-btn{
   margin-right: 1em;
 }
+.course .catagory-btn .total-view{
+  color: var(--acent-color);
+}
+.course .catagory-btn .total-view a{
+  color: var(--secondery-color);
+}
 .course .course-sub{
   margin-top: 2em;
   display: grid;
@@ -464,7 +485,7 @@ a{
 }
 .course .course-sub .sub-box .trainer img{
   width: 50px;
-  border-radius: 5px;
+  border-radius: 50%;
 }
 .course .course-sub .sub-box .thumb .sell-count{
   position: absolute;
@@ -474,4 +495,31 @@ a{
   background: var(--acent-color);
   padding: .2em .4em;
   color: var(--white-color);
+}
+
+.course .course-sub .sub-box .sell-cta h5{
+  margin: 0;
+  font-weight: var(--fw-bold);
+}
+.course .course-sub .sub-box .trainer h5{
+  margin: 0;
+  font-weight: var(--fw-bold);
+}
+.course .course-sub .sub-box .sell-cta span{
+  font-weight: var(--fw-bold);
+}
+.course .course-sub .sub-box .sell-cta span i{
+  color: var(--acent-color);
+}
+
+.growth {}
+.growth .growth-box{
+  height: 280px;
+  width: 280px;
+  border-radius: 50%;
+  border: 1em solid #eaeaeabd;
+  padding: 1em;
+}
+.growth .growth-box i{
+  color: var(--acent-color);
 }
