--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ span{
   background-position: center;
 }
 .hero .content{
-  margin-top: 5em;
+  margin-top: 15vh;
   background: var(--white-color);
   background: var(--white-color);
   border-left: 5px solid var(--acent-color);
@@ -589,18 +589,119 @@ span{
 }
 
 /* ======== clintes ========== */
-.clintes{
-  background: url(./Image/bg.jpg), #1111118f ;
+.follow-us{
+  background: url(./Image/bg.jpg), #111111b1 ;
   background-size: cover;
   background-blend-mode: multiply;
   background-position: center;
-  height: 100vh;
+  min-height: 67vh;
 }
-.clintes .content-box{
-  width: 70%;
-  height: 300px;
-  background: #000;
-  border: 2px solid var(--white-color);
+.follow-us .content{
+  padding-top: 6em;
+}
+.follow-us .content .student{
+  background: #000000df;
+  padding: 4em;
+  color: var(--white-color);
+}
+.follow-us .content .teacher{
+  background: var(--acent-color);
+  padding: 4em;
+  color: var(--white-color);
+}
+.follow-us .content .input-form{
+  background: #fe5a75b6;
+  padding: 1em ;
+  border-radius: 50px;
+}
+.follow-us .content .teacher-input-form{
+  background: #000000b6;
+  padding: 1em ;
+  border-radius: 50px;
+}
+.follow-us .content .input-form .as-student{
+  outline: none;
+  height: 30px;
+  width: 100px;
+  background: transparent;
+  border: none;
+  color: var(--white-color);
+}
+.follow-us .content .input-form .student-btn{
+  padding: .5em 1em;
+  border: none;
+  background: #000000d3;
+  color: var(--white-color);
+  border-radius: 20px;
+}
+.follow-us .content .teacher-input-form .as-teacher{
+  outline: none;
+  height: 30px;
+  width: 100px;
+  background: transparent;
+  border: none;
+  color: var(--white-color);
+}
+.follow-us .content .teacher-input-form .teacher-btn{
+  padding: .5em 1em;
+  border: none;
+  background: #FE5A75;
+  color: var(--white-color);
+  border-radius: 20px;
+}
+::placeholder{
+  color: var(--white-color);
+}
+
+@media(max-width:50em){
+  .follow-us{
+    height: 100%;
+  }
+  .follow-us .content .teacher{
+    padding: 2em;
+  }
+  .follow-us .content .student{
+    padding: 2em;
+  }
+  .follow-us .content{
+    padding: 2em 0;
+  }
+  .follow-us .content .teacher-input-form .as-teacher{
+    outline: none;
+    height: 20px;
+  }
+}
+
+.brands{
+  background: #f0f0f0;
+  padding: 2em;
 }
 
 
+
+footer{
+  margin-top: 1em;
+}
+footer .footer-flex{
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  border: 1px solid #000;
+  padding: 1em 2em;
+}
+footer .footer-flex i{
+  font-size: 2em;
+  background: var(--acent-color);
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+}
+.copyright{
+  margin-top: 2em;
+  background: var(--secondery-color);
+  color: var(--white-color);
+}
