--- a/style.css
+++ b/style.css
@@ -680,14 +680,17 @@ span{
 
 
 footer{
-  margin-top: 1em;
+  margin-top: 3em;
 }
 footer .footer-flex{
   display: flex;
   align-items: center;
   gap: 1em;
-  border: 1px solid #000;
   padding: 1em 2em;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 6px 17px 5px rgba(0,0,0,0.09);
+-moz-box-shadow: 5px 6px 17px 5px rgba(0,0,0,0.09);
+box-shadow: 5px 6px 17px 5px rgba(0,0,0,0.05);
 }
 footer .footer-flex i{
   font-size: 2em;
